DigicielFull/force-app/main/default/objects/Product2/fields/Ad_Format__c.field-meta.xml
<CustomField>
    <fullName>Ad_Format__c</fullName>
    <label>Ad Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>App Development</fullName>
            </value>
            <value>
                <fullName>Balance Check</fullName>
            </value>
            <value>
                <fullName>Bulk SMS</fullName>
            </value>
            <value>
                <fullName>Childrens Programmes</fullName>
            </value>
            <value>
                <fullName>Daytime (7am-5pm)</fullName>
            </value>
            <value>
                <fullName>Early Evening (5pm-6:30pm)</fullName>
            </value>
            <value>
                <fullName>Facebook Advertising</fullName>
            </value>
            <value>
                <fullName>Facebook Management</fullName>
            </value>
            <value>
                <fullName>Google Adwords (PPC)</fullName>
            </value>
            <value>
                <fullName>Google Display Network</fullName>
            </value>
            <value>
                <fullName>HPU</fullName>
            </value>
            <value>
                <fullName>Interstitial - Desktop</fullName>
            </value>
            <value>
                <fullName>Interstitial - Mobile</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Leaderboard</fullName>
            </value>
            <value>
                <fullName>MPU - Desktop</fullName>
            </value>
            <value>
                <fullName>MPU - Mobile</fullName>
            </value>
            <value>
                <fullName>Native Content Article</fullName>
            </value>
            <value>
                <fullName>Native Content with video</fullName>
            </value>
            <value>
                <fullName>NRL Spots</fullName>
            </value>
            <value>
                <fullName>Primetime (7L15pm-10pm)</fullName>
            </value>
            <value>
                <fullName>Skyscraper</fullName>
            </value>
            <value>
                <fullName>SMS Messaging</fullName>
            </value>
            <value>
                <fullName>Sports Spots</fullName>
            </value>
            <value>
                <fullName>State of Origin Spots</fullName>
            </value>
            <value>
                <fullName>TVC Production 3D Graphics</fullName>
            </value>
            <value>
                <fullName>TVC Production Filming</fullName>
            </value>
            <value>
                <fullName>TVC Production Graphics</fullName>
            </value>
            <value>
                <fullName>TVWAN News Spots</fullName>
            </value>
            <value>
                <fullName>Website Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>