DigicielFull/force-app/main/default/objects/Product2/fields/amc__Milestone_Template__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Milestone that will be used as a Template when auto-generating a new Project from the Opportunity</description>
    <inlineHelpText>Links to the Milestone that will be used as a Template when auto-generating a new Project from the Opportunity</inlineHelpText>
    <label>Milestone  Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Milestone__c.amc__Project__r.amc__Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Products (Template)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>