DigicielFull/force-app/main/default/objects/Product2/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <label>Bonus</label>
    <length>250</length>
    <type>Text</type>
</CustomField>