DigicielFull/force-app/main/default/objects/Product2/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>