DigicielFull/force-app/main/default/objects/Product2/fields/Bundled_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Minutes__c</fullName>
    <label>Bundled Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>