DigicielFull/force-app/main/default/objects/Product2/fields/Bundled_SMS__c.field-meta.xml
<CustomField>
    <fullName>Bundled_SMS__c</fullName>
    <label>Bundled SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>