DigicielFull/force-app/main/default/objects/Product2/fields/Calls_to_Telecom_Local_Off_Peak__c.field-meta.xml
<CustomField>
    <fullName>Calls_to_Telecom_Local_Off_Peak__c</fullName>
    <label>Calls to Telecom Local (Off-Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>