DigicielFull/force-app/main/default/objects/Product2/fields/Calls_to_Telecom_National_Peak__c.field-meta.xml
<CustomField>
    <fullName>Calls_to_Telecom_National_Peak__c</fullName>
    <label>Calls to Telecom National (Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>