DigicielFull/force-app/main/default/objects/Product2/fields/Caribbean_Rate__c.field-meta.xml
<CustomField>
    <fullName>Caribbean_Rate__c</fullName>
    <label>Caribbean Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>