DigicielFull/force-app/main/default/objects/Product2/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSM - Activation</fullName>
            </value>
            <value>
                <fullName>GSM - Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>