DigicielFull/force-app/main/default/objects/Product2/fields/Data_bundle_MB__c.field-meta.xml
<CustomField>
    <fullName>Data_bundle_MB__c</fullName>
    <label>Data bundle (MB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>