DigicielFull/force-app/main/default/objects/Product2/fields/Data_Usage__c.field-meta.xml
<CustomField>
    <fullName>Data_Usage__c</fullName>
    <label>Data Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>