DigicielFull/force-app/main/default/objects/Product2/fields/Days_Before_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Next_Review__c</fullName>
    <label>Days Before Next Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>