DigicielFull/force-app/main/default/objects/Product2/fields/DealHub_Is_Renewable__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Is_Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DealHub Is Renewable</label>
    <type>Checkbox</type>
</CustomField>