DigicielFull/force-app/main/default/objects/Product2/fields/Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Required?</label>
    <type>Checkbox</type>
</CustomField>