DigicielFull/force-app/main/default/objects/Product2/fields/Digi_to_Digi_Peak__c.field-meta.xml
<CustomField>
    <fullName>Digi_to_Digi_Peak__c</fullName>
    <label>Digi to Digi (Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>