DigicielFull/force-app/main/default/objects/Product2/fields/Digicel_Pan_Pacific_Rate__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Pan_Pacific_Rate__c</fullName>
    <label>Digicel &quot;Pan-Pacific&quot; Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>