DigicielFull/force-app/main/default/objects/Product2/fields/Discount_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Approval Required?</label>
    <type>Checkbox</type>
</CustomField>