DigicielFull/force-app/main/default/objects/Product2/fields/Effective_In_Bundle_Rate_per_MB__c.field-meta.xml
<CustomField>
    <fullName>Effective_In_Bundle_Rate_per_MB__c</fullName>
    <label>Effective In-Bundle Rate per MB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>