DigicielFull/force-app/main/default/objects/Product2/fields/Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Rate__c</fullName>
    <label>Effective Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>