DigicielFull/force-app/main/default/objects/Product2/fields/Effective_Rate_per_Minute__c.field-meta.xml
<CustomField>
    <fullName>Effective_Rate_per_Minute__c</fullName>
    <label>Effective Rate per Minute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>