DigicielFull/force-app/main/default/objects/Product2/fields/Int_Bundle_Call_Rate_Zone1_OffPeak__c.field-meta.xml
<CustomField>
    <fullName>Int_Bundle_Call_Rate_Zone1_OffPeak__c</fullName>
    <label>Int. Bundle Call Rate - Zone1 (Off-Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>