DigicielFull/force-app/main/default/objects/Product2/fields/Int_Bundle_Call_Rate_Zone2_Peak__c.field-meta.xml
<CustomField>
    <fullName>Int_Bundle_Call_Rate_Zone2_Peak__c</fullName>
    <label>Int. Bundle Call Rate - Zone2 (Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>