DigicielFull/force-app/main/default/objects/Product2/fields/Int_Bundle_Call_Rate_Zone3__c.field-meta.xml
<CustomField>
    <fullName>Int_Bundle_Call_Rate_Zone3__c</fullName>
    <label>Int. Bundle Call Rate - Zone3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>