DigicielFull/force-app/main/default/objects/Product2/fields/International_Band_B__c.field-meta.xml
<CustomField>
    <fullName>International_Band_B__c</fullName>
    <label>International Band B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>