DigicielFull/force-app/main/default/objects/Product2/fields/International_Band_C__c.field-meta.xml
<CustomField>
    <fullName>International_Band_C__c</fullName>
    <label>International Band C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>