DigicielFull/force-app/main/default/objects/Product2/fields/International_Rate__c.field-meta.xml
<CustomField>
    <fullName>International_Rate__c</fullName>
    <label>International Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>