DigicielFull/force-app/main/default/objects/Product2/fields/International_SMS_Peak__c.field-meta.xml
<CustomField>
    <fullName>International_SMS_Peak__c</fullName>
    <label>International SMS (Peak)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>