DigicielFull/force-app/main/default/objects/Product2/fields/LaunchDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchDate__c</fullName>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>