DigicielFull/force-app/main/default/objects/Product2/fields/LOADCODE__c.field-meta.xml
<CustomField>
    <fullName>LOADCODE__c</fullName>
    <label>LOADCODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>