DigicielFull/force-app/main/default/objects/Product2/fields/Minutes_Bundle_Destination__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Bundle_Destination__c</fullName>
    <label>Minutes Bundle Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>