DigicielFull/force-app/main/default/objects/Product2/fields/Nb_of_related_SR__c.field-meta.xml
<CustomField>
    <fullName>Nb_of_related_SR__c</fullName>
    <label>Nb of related SR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>