DigicielFull/force-app/main/default/objects/Product2/fields/Not_Allowed_to_Change_Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Not_Allowed_to_Change_Standard_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Allowed to Change Standard Price</label>
    <type>Checkbox</type>
</CustomField>