DigicielFull/force-app/main/default/objects/Product2/fields/Off_Peak_Hours__c.field-meta.xml
<CustomField>
    <fullName>Off_Peak_Hours__c</fullName>
    <label>Off Peak Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>