DigicielFull/force-app/main/default/objects/Product2/fields/P_N__c.field-meta.xml
<CustomField>
    <fullName>P_N__c</fullName>
    <label>P/N</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cabling Repair</fullName>
            </value>
            <value>
                <fullName>GenCons</fullName>
            </value>
            <value>
                <fullName>ISP Help</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>OnSite</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>