DigicielFull/force-app/main/default/objects/Product2/fields/Play_TV_lite__c.field-meta.xml
<CustomField>
    <fullName>Play_TV_lite__c</fullName>
    <label>Play TV lite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>