DigicielFull/force-app/main/default/objects/Product2/fields/PNG_ChargeType__c.field-meta.xml
<CustomField>
    <fullName>PNG_ChargeType__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Rental or Lease</fullName>
            </value>
            <value>
                <fullName>PAYG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>