DigicielFull/force-app/main/default/objects/Product2/fields/PNG_Description__c.field-meta.xml
<CustomField>
    <fullName>PNG_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>