DigicielFull/force-app/main/default/objects/Product2/fields/PNG_InstallationProduct__c.field-meta.xml
<CustomField>
    <fullName>PNG_InstallationProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Product</label>
    <type>Checkbox</type>
</CustomField>