DigicielFull/force-app/main/default/objects/Product2/fields/PNG_Product_is_Restricted__c.field-meta.xml
<CustomField>
    <fullName>PNG_Product_is_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product is Restricted?</label>
    <type>Checkbox</type>
</CustomField>