DigicielFull/force-app/main/default/objects/Product2/fields/PNG_ProductLevel1__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductLevel1__c</fullName>
    <label>PNG Product Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3G</fullName>
            </value>
            <value>
                <fullName>Bulk SMS</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Clipsal</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>cnMaestro</fullName>
            </value>
            <value>
                <fullName>Co-Location</fullName>
            </value>
            <value>
                <fullName>Connected Fleet</fullName>
            </value>
            <value>
                <fullName>Data Plans</fullName>
            </value>
            <value>
                <fullName>Digicel Private Cloud</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Equipment/License Sales - Cisco Meraki</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Fixed Voice</fullName>
            </value>
            <value>
                <fullName>GSM - Hardware/Handsets</fullName>
            </value>
            <value>
                <fullName>IP Address</fullName>
            </value>
            <value>
                <fullName>Ku Band</fullName>
            </value>
            <value>
                <fullName>LTE</fullName>
            </value>
            <value>
                <fullName>LTE Data Plans</fullName>
            </value>
            <value>
                <fullName>LTE Router Digicel Connect</fullName>
            </value>
            <value>
                <fullName>Managed WiFi</fullName>
            </value>
            <value>
                <fullName>Microsoft Office 365</fullName>
            </value>
            <value>
                <fullName>Microwave - O3B</fullName>
            </value>
            <value>
                <fullName>Microwave - Voice Services</fullName>
            </value>
            <value>
                <fullName>MW - DIA</fullName>
            </value>
            <value>
                <fullName>MW - PBN</fullName>
            </value>
            <value>
                <fullName>MW - Voice Services</fullName>
            </value>
            <value>
                <fullName>MW with LTE</fullName>
            </value>
            <value>
                <fullName>MW with MW Redundancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>