DigicielFull/force-app/main/default/objects/Product2/fields/PNG_ProductLevel3__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductLevel3__c</fullName>
    <label>PNG Product Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Services: 100 mins ,100 sms</fullName>
            </value>
            <value>
                <fullName>Basic Postpaid CUG</fullName>
            </value>
            <value>
                <fullName>Capped</fullName>
            </value>
            <value>
                <fullName>Capped 1:1 Contention</fullName>
            </value>
            <value>
                <fullName>Capped 2:1 Contention</fullName>
            </value>
            <value>
                <fullName>Capped 4:1 Contention</fullName>
            </value>
            <value>
                <fullName>Capped 10:1 Contention</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Unlimited 1:1 Contention</fullName>
            </value>
            <value>
                <fullName>Unlimited 2:1 Contention</fullName>
            </value>
            <value>
                <fullName>Unlimited 4:1 Contention</fullName>
            </value>
            <value>
                <fullName>Unlimited 10:1 Contention</fullName>
            </value>
            <value>
                <fullName>ICT LTE Red 250 GB</fullName>
            </value>
            <value>
                <fullName>ICT LTE Red 500 GB</fullName>
            </value>
            <value>
                <fullName>ICT LTE Red 50 GB</fullName>
            </value>
            <value>
                <fullName>ICT LTE Red 85 GB</fullName>
            </value>
            <value>
                <fullName>Premium Postpaid CUG</fullName>
            </value>
            <value>
                <fullName>Super Postpaid CUG</fullName>
            </value>
            <value>
                <fullName>Toll Free 10,000</fullName>
            </value>
            <value>
                <fullName>Toll Free 20,000</fullName>
            </value>
            <value>
                <fullName>Toll Free 2000</fullName>
            </value>
            <value>
                <fullName>Toll Free 5000</fullName>
            </value>
            <value>
                <fullName>Toll Free PAYG</fullName>
            </value>
            <value>
                <fullName>0 - 100 000</fullName>
            </value>
            <value>
                <fullName>100 000 - 200 00</fullName>
            </value>
            <value>
                <fullName>200 000 - 400 000</fullName>
            </value>
            <value>
                <fullName>400 000 - 600 000</fullName>
            </value>
            <value>
                <fullName>600 000 - 800 000</fullName>
            </value>
            <value>
                <fullName>800 000 - 1 000 000</fullName>
            </value>
            <value>
                <fullName>PAYG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>