DigicielFull/force-app/main/default/objects/Product2/fields/PNG_ProductType__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductType__c</fullName>
    <label>PNG Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Services (GSM)</fullName>
            </value>
            <value>
                <fullName>Connectivity Services (ICT)</fullName>
            </value>
            <value>
                <fullName>Enterprise Services (ICT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>