DigicielFull/force-app/main/default/objects/Product2/fields/PNG_QTYAvailable__c.field-meta.xml
<CustomField>
    <fullName>PNG_QTYAvailable__c</fullName>
    <label>QTY Available</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>