DigicielFull/force-app/main/default/objects/Product2/fields/PNG_QTYOnHold__c.field-meta.xml
<CustomField>
    <fullName>PNG_QTYOnHold__c</fullName>
    <label>QTY on Hold</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>