DigicielFull/force-app/main/default/objects/Product2/fields/PNG_QTYUnAllocated__c.field-meta.xml
<CustomField>
    <fullName>PNG_QTYUnAllocated__c</fullName>
    <label>QTY UnAllocated</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>