DigicielFull/force-app/main/default/objects/Product2/fields/PNG_Quality__c.field-meta.xml
<CustomField>
    <fullName>PNG_Quality__c</fullName>
    <label>Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-off</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>