DigicielFull/force-app/main/default/objects/Product2/fields/PNG_SKU__c.field-meta.xml
<CustomField>
    <fullName>PNG_SKU__c</fullName>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>