DigicielFull/force-app/main/default/objects/Product2/fields/PNG_SKUType__c.field-meta.xml
<CustomField>
    <fullName>PNG_SKUType__c</fullName>
    <label>SKU Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>