DigicielFull/force-app/main/default/objects/Product2/fields/PNG_TotalQty__c.field-meta.xml
<CustomField>
    <fullName>PNG_TotalQty__c</fullName>
    <label>Total Qty</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>