DigicielFull/force-app/main/default/objects/Product2/fields/Product_Family2__c.field-meta.xml
<CustomField>
    <fullName>Product_Family2__c</fullName>
    <label>zDeprecatedDigicel Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud ICT and Business Continuity</fullName>
            </value>
            <value>
                <fullName>Unified Communications and Collaboration</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Connectivity and Networks</fullName>
            </value>
            <value>
                <fullName>Internet of Things (IOT)</fullName>
            </value>
            <value>
                <fullName>Media Service and Television</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Professional and Managed Services</fullName>
            </value>
            <value>
                <fullName>Security and Surveillance</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>